fixed spacing of the form errors

--- a/src/components/MyAccountPage/MyAccountPage.css
+++ b/src/components/MyAccountPage/MyAccountPage.css
@@ -35,8 +35,8 @@
 
 .accountPageForm p {
   font-size: 13.5px;
-  padding: 0px;
   margin: 0px;
+  margin-bottom: -22.5px;
   color: #d3302f;
 }
 
@@ -47,41 +47,9 @@
 }
 
 .invalidHeader {
-  /* position: relative; */
-  /* top: -171%; */
-  /* right: 25%; */
-  /* padding: 0px;
-  margin: 0px; */
-  /* margin-top: -35px; */
-  color: #d3302f;
-}
-
-.nameErrorText {
-  /* position: absolute; */
   padding: 0px;
   margin: 0px;
-  /* top: 21.5%;
-  right: 31.7%; */
+  margin-top: -9%;
+  margin-bottom: -7.3%;
   color: #d3302f;
-  font-size: 15px;
-}
-
-.emailErrorText {
-  /* position: absolute; */
-  padding: 0px;
-  margin: 0px;
-  /* top: 31.5%;
-  right: 31.7%; */
-  color: #d3302f;
-  font-size: 15px;
-}
-
-.passwordErrorText {
-  /* position: absolute; */
-  padding: 0px;
-  margin: 0px;
-  /* top: 47%;
-  right: 27%; */
-  color: #d3302f;
-  font-size: 15px;
 }
